<?php

namespace App\Constants;

class Roles
{
    const ROLE_ADMIN = 'administrator';

    const ROLE_STAFF = 'staff';
}
