@startuml ProcureFlow-ERD

title ProcureFlow - Database Entity Relationship Diagram

skinparam linetype ortho
hide circle
hide empty methods
hide empty fields

' ==========================
' AUTH & ROLE MANAGEMENT
' ==========================

entity "users" as users {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  * name : string
  * email : string <<unique>>
  * password : string
  is_active : boolean
  email_verified_at : datetime
  * created_at : datetime
  * updated_at : datetime
  deleted_at : datetime <<soft delete>>
}

entity "roles" as roles {
  * id : integer <<PK>>
  --
  * name : string <<unique>>
  guard_name : string
  * created_at : datetime
  * updated_at : datetime
}

entity "permissions" as permissions {
  * id : integer <<PK>>
  --
  * name : string <<unique>>
  guard_name : string
  * created_at : datetime
  * updated_at : datetime
}

entity "model_has_roles" as model_has_roles {
  * role_id : integer <<FK>>
  * model_id : integer <<FK>>
  * model_type : string
}

entity "role_has_permissions" as role_has_permissions {
  * permission_id : integer <<FK>>
  * role_id : integer <<FK>>
}

' ==========================
' MASTER DATA
' ==========================

entity "suppliers" as suppliers {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  * name : string
  email : string
  phone : string
  address : text
  * is_active : boolean
  metadata : json
  * created_at : datetime
  * updated_at : datetime
  deleted_at : datetime <<soft delete>>
}

entity "products" as products {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  * category_id : integer <<FK>>
  * sku : string <<unique>>
  * name : string
  * unit_price : integer
  * is_active : boolean
  specifications : json
  * created_at : datetime
  * updated_at : datetime
  deleted_at : datetime <<soft delete>>
}

' ==========================
' TRANSACTIONAL DATA
' ==========================

entity "purchase_orders" as purchase_orders {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  * po_number : string <<unique>>
  * supplier_id : integer <<FK>>
  * creator_id : integer <<FK -> users.id>>
  * order_date : datetime
  * status : string(draft,submitted,approved,received,cancelled)
  * is_urgent : boolean
  notes : json
  * created_at : datetime
  * updated_at : datetime
  deleted_at : datetime <<soft delete>>
}

entity "purchase_order_items" as purchase_order_items {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  * purchase_order_id : integer <<FK>>
  * product_id : integer <<FK>>
  * product_name_snapshot : string
  * unit_price_snapshot : decimal
  * quantity : integer
  * subtotal : integer
  * created_at : datetime
  * updated_at : datetime
  deleted_at : datetime <<soft delete>>
}

entity "documents" as documents {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  * documentable_type : string
  * documentable_id : string 
  * file_path : string
  * metadata : json
  * created_at : datetime
  * updated_at : datetime
  deleted_at : datetime <<soft delete>>
}

' ==========================
' AUDIT (laravel-auditing)
' ==========================

entity "audits" as audits {
  * id : integer <<PK>>
  --
  * public_id : UUID <<unique>>
  user_id : integer <<FK>>
  * event : string
  * auditable_type : string
  * auditable_id : integer
  old_values : json
  new_values : json
  url : string
  ip_address : string
  user_agent : string
  * created_at : datetime
  * updated_at : datetime
}

' ==========================
' RELATIONSHIPS
' ==========================

users ||--o{ model_has_roles : "assigned via"
roles ||--o{ model_has_roles : "assigned via"
roles ||--o{ role_has_permissions : "has"
permissions ||--o{ role_has_permissions : "granted via"

suppliers ||--o{ purchase_orders : "has many"
users ||--o{ purchase_orders : "created by"
purchase_orders ||--o{ purchase_order_items : "has many"
products ||--o{ purchase_order_items : "referenced by"

users ||--o{ audits : "performed by"
users ..> audits : "auditable"
categories ..> audits : "auditable"
products ..> audits : "auditable"
suppliers ..> audits : "auditable"
purchase_orders ..> audits : "auditable"
purchase_order_items ..> audits : "auditable"
documents ..> audits : "auditable"

@enduml
